--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <canvas id="ball_canvas">
     </canvas>
 </div>
-<div id="questions_list">
+<div id="questions_list_container">
+    <h3>Most recent questions & answers:</h3>
+    <p id="questions_list">
+    </p>
 </div>
 
 <script type="text/javascript">
