--- a/index.html
+++ b/index.html
@@ -2,25 +2,32 @@
 <html>
 <head>
     <title>Magic Eight Ball</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/magiceightball.js"></script>
     <script src="js/displayfunctions.js"></script>
 </head>
 <body>
  
+<div id="page">
+    <div id="header">
+        <div id="header_text">
+            <h2>Magic Eight Ball Simulation</h2>
+        </div>
+    </div>
+    <div id="eight_ball_area">
+        <form id="question_form">
+          Enter Question: <input type="text" id="user_question_box">
+          <input type="button" onclick="get_user_question()" value="Turn Over Magic Eight Ball">
+        </form>
 
-<div id="eight_ball_area">
-    <form id="question_form">
-      Enter Question: <input type="text" id="user_question_box"><br>
-      <input type="button" onclick="get_user_question()" value="Turn Over Magic Eight Ball">
-    </form>
-
-    <canvas id="ball_canvas">
-    </canvas>
-</div>
-<div id="questions_list_container">
-    <h3>Most recent questions & answers:</h3>
-    <p id="questions_list">
-    </p>
+        <canvas id="ball_canvas">
+        </canvas>
+    </div>
+    <div id="questions_list_container">
+        <h3>Most recent questions & answers:</h3>
+        <p id="questions_list">
+        </p>
+    </div>
 </div>
 
 <script type="text/javascript">
