Cleaned up code
Moved canvas respective code into canvas.js file. Split the mega
function (marked to make it easier) of canvas painting into smaller
functions for each section. Added a giant figure 8 to be displayed
before any questions are asked.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Magic Eight Ball</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/magiceightball.js"></script>
+    <script src="js/canvas.js"></script>
     <script src="js/displayfunctions.js"></script>
 </head>
 <body>
