Helping with js script loading
Moved all js into a single file (could have kept the three files and
instead organized their load sequence with some nifty JQuery, but for a
small app this works).
Declared it as async, and the script call is made just after the Canvas
element is loaded.
This makes sure we have canvas, but the page can continue to render
while we wait for any js to download.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           Enter Question: <input type="text" id="user_question_box">
           <input type="button" onclick="get_user_question()" value="Turn Over Magic Eight Ball">
         </form>
-
         <canvas id="ball_canvas">
         </canvas>
+        <script async src="js/magiceightball.js"></script>
     </div>
     <div id="questions_list_container">
         <h3>Most recent questions & answers:</h3>
@@ -27,8 +27,5 @@
         </p>
     </div>
 </div>
-    <script src="js/magiceightball.js"></script>
-    <script src="js/canvas.js"></script>
-    <script src="js/displayfunctions.js"></script>
 </body>
 </html>
